package com.clinique.backend.models;

/**
 * Roles possibles d'un utilisateur dans le systeme.
 */
public enum Role {
    PATIENT,
    MEDECIN,
    SECRETAIRE
}
