@startuml DC_GestionClinique
!theme plain
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #1565C0
skinparam classFontSize 13
skinparam classAttributeFontSize 12
skinparam ArrowColor #424242
skinparam ArrowThickness 1.2
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 60
title <b>Diagramme de Classes</b>\nSystème de gestion de la clinique
' ==========================================================
'  ÉNUMÉRATION
' ==========================================================
enum Role {
  MEDECIN
  SECRETAIRE
  PATIENT
}
' ==========================================================
'  CLASSE ABSTRAITE PARENT
' ==========================================================
abstract class Utilisateur {
  - id : Long
  - nomComplet : String
  - email : String
  - motDePasse : String
  - role : Role
  --
  + seConnecter() : Boolean
  + seDeconnecter() : void
}
' ==========================================================
'  SOUS-CLASSES (HÉRITAGE)
' ==========================================================
class Patient {
  - cin : String
  - dateNaissance : LocalDate
  - telephone : String
  --
  + consulterHistorique() : List<Consultation>
  + prendreRendezVous(medecin : Medecin, date : LocalDateTime) : RendezVous
  + consulterDossier() : DossierMedical
}
class Medecin {
  - specialite : String
  --
  + ajouterConsultation(patient : Patient, donnees : String) : Consultation
  + demanderPredictionIA(consultation : Consultation) : PredictionIA
  + prescrireOrdonnance(consultation : Consultation, details : String) : void
  + consulterDossierPatient(patientId : Long) : DossierMedical
  + gererDossierMedical(dossier : DossierMedical) : void
}
class Secretaire {
  - numeroBureau : String
  --
  + planifierRendezVous(patient : Patient, medecin : Medecin, date : LocalDateTime) : RendezVous
  + creerDossierPatient(donnees : String) : Patient
  + lireDossierPatient(patientId : Long) : Patient
  + modifierDossierPatient(patientId : Long, donnees : String) : Patient
  + supprimerDossierPatient(patientId : Long) : void
}
' ==========================================================
'  ENTITÉS MÉTIER
' ==========================================================
class DossierMedical {
  - id : Long
  - dateOuverture : LocalDateTime
  - statut : String
}
class RendezVous {
  - id : Long
  - dateHeure : LocalDateTime
  - statut : String
  --
  + confirmer() : void
  + annuler() : void
}
class Consultation {
  - id : Long
  - dateConsultation : LocalDate
  - symptomes : String
  - diagnostic : String
  - ordonnanceNotes : String
  .. Données Biométriques (IA) ..
  - pregnancies : Integer
  - glucose : Integer
  - bloodPressure : Integer
  - skinThickness : Integer
  - insulin : Integer
  - bmi : Float
  - diabetesPedigreeFunction : Float
  - age : Integer
  --
  + creerConsultation() : Consultation
}
class PredictionIA {
  - id : Long
  - resultatIA : Integer
  - probabilite : Double
  - dateGeneration : LocalDateTime
}
' ==========================================================
'  HÉRITAGE
' ==========================================================
Utilisateur <|-- Patient
Utilisateur <|-- Medecin
Utilisateur <|-- Secretaire
' ==========================================================
'  RELATIONS MÉTIER (avec cardinalités)
' ==========================================================
Patient        "1"  --  "1"     DossierMedical  : possède >
Patient        "1"  --  "0..*"  RendezVous      : prend >
Medecin        "1"  --  "0..*"  RendezVous      : reçoit >
DossierMedical "1"  --  "0..*"  Consultation    : contient >
Medecin        "1"  --  "0..*"  Consultation    : effectue >
Consultation   "1"  --  "0..1"  PredictionIA    : déclenche >
' ==========================================================
'  RELATIONS SECRÉTAIRE (gestion administrative)
' ==========================================================
Secretaire     "1"  --  "0..*"  RendezVous      : planifie >
Secretaire     "1"  --  "0..*"  DossierMedical  : gère >
@enduml